UI改版,新增生成历史记录

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+#1.基础依赖
 torch>=2.0.0
 torchvision
 torchaudio
@@ -9,6 +10,14 @@ sentencepiece
 huggingface_hub
 safetensors
 
-Diffusers 需要从 GitHub 源码安装以支持 Z-Image 的最新特性
+#2.Diffusers 需要从 GitHub 源码安装以支持 Z-Image 的最新特性
+
 
 diffusers @ git+https://github.com/huggingface/diffusers.git
+
+#3. Web 服务库 (FastAPI 套件)
+fastapi
+uvicorn
+python-multipart
+aiofiles
+websockets
